# generator-rs

./: .gitignore  .travis.yml  Cargo.toml  Cross.toml  LICENSE  README.md  appveyor.yml  bindings.txt  build.rs  examplespsend.rs
.github/workflows/: lint.yml  rust.yml  test.yml
api_gen/: Cargo.toml
api_gen/src/: main.rs
benches/: lib.rs
examples/: cd.rs  compact.rs  fib.rs  get_yield.rs  number.rs  pipe.rs  range.rs  send.rs  stack_resize.rs  yield_from.rs
src/: alloc.rs  coroutine.rs  env.rs  fn_gen.rs  gen_impl.rs  generator.rs  lib.rs  main.rs  no_drop.rs  reg_context.rs  rt.rs  scope.rs  stack.rs  stack_size.rs  yield_.rs
src/detail/: aarch64_unix.rs  arm_unix.rs  gen.rs  loongarch64_unix.rs  mod.rs  ppc64le_unix.rs  riscv64_unix.rs  x86_64_unix.rs  x86_64_windows.rs
src/detail/asm/: asm_aarch64_aapcs_elf_gas.S  asm_aarch64_aapcs_macho_gas.S  asm_arm_aapcs_elf.S  asm_loongarch64_sysv_elf_gas.S  asm_ppc64le_elf.S  asm_riscv64_c_elf.S  asm_x86_64_ms_pe.S  asm_x86_64_ms_pe_gas.asm  asm_x86_64_ms_pe_masm.asm  asm_x86_64_sysv_elf_gas.S  asm_x86_64_sysv_macho_gas.S
src/stack/: mod.rs  overflow_unix.rs  overflow_windows.rs  unix.rs  windows.rs  windows_bindings.rs
src/stack/windows/: mod.rs
tests/: lib.rs
