[package]
name = "generator"
version = "0.7.5"
edition = "2021"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Xudong-Huang/generator-rs.git"
homepage = "https://github.com/Xudong-Huang/generator-rs.git"
documentation = "https://docs.rs/generator"
description = "Stackfull Generator Library in Rust"
readme = "README.md"
keywords = ["generator", "coroutine", "green", "thread", "fiber"]
categories = ["data-structures", "algorithms"]
build = "build.rs"
exclude = [
    ".gitignore",
    ".travis.yml",
    "appveyor.yml",
    "benches/**/*",
]


[target.'cfg(windows)'.dependencies.windows]
version = "0.48"
features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug"
]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies]
log = "0.4"


[build-dependencies]
cc = "1.0"
rustversion = "1.0"

# release build
[profile.release]
lto = true
